fixed the event#update form. Created materialize toasts for when user messes up form. Aligned buttons for calendar correctly

--- a/app/assets/stylesheets/eventform.scss
+++ b/app/assets/stylesheets/eventform.scss
@@ -5,3 +5,11 @@ label#event_start_label {
 #start_date_event {
   padding-left: 0px;
 }
+
+#event-show-edit-button {
+  margin-right: 20px;
+}
+
+#event-show-delete-button {
+  margin-right: 20px;
+}
